--- a/project2.html
+++ b/project2.html
@@ -11,7 +11,7 @@
     <div class="back">
         <div class="Tasks">Tasks <p class="Lists">List</p></div>
     </div>
-    <div class="plus1"><button class="b3"><a class="a1" href="./project1.html"><<h3 class="back1">--</h3></a></button></div>
+    <div class="plus1"><button class="b3"><a class="a1" href="./index.html"><<h3 class="back1">--</h3></a></button></div>
         <div class="p3">Back</div>
     <div class="plus2"><button class="b1"><a class="a1" href="./project3.html">+</a></button></div>
         <div class="p2">Add New Task</div>
